<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="false"
    android:focusable="false"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    tools:context=".LoginFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="20sp"
        android:gravity="center|top"
        android:text="Login"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="150dp"
        android:layout_marginVertical="15dp"

        android:id="@+id/book_id"
        android:src="@drawable/register2"
        />

    <AutoCompleteTextView

        android:id="@+id/first_name"
        android:drawableStart="@drawable/person"
        android:drawablePadding="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingVertical="5sp"
        android:textColor="@color/black"
        android:inputType="text"
        android:hint="@string/enter_first_name"
        android:textColorHint="@color/black"
        android:textSize="25dp"

        />

    <AutoCompleteTextView
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:paddingVertical="10dp"
        android:layout_marginVertical="10dp"
        android:ems="10"
        android:textSize="24dp"
        android:hint="@string/enter_your_password"
        android:inputType="numberPassword"
        android:padding="5sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >
    <Button
        android:backgroundTint="#17476E"
        android:id="@+id/b_sign_in"
        android:layout_width="wrap_content"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_button"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="10sp"
        />

        <Button
            android:id="@+id/b_register_in_login"

            android:layout_width="131dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="150dp"
            android:layout_marginTop="20sp"
            android:layout_marginRight="10sp"
            android:backgroundTint="#17476E"
            android:text="@string/register_now"
            android:textColor="@color/white" />
    </LinearLayout>


</LinearLayout>