<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".RegisterFragment">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="false"
    android:layoutDirection="ltr"
    android:focusable="false"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginTop="20sp"
        android:gravity="center|top"
        android:text="@string/registeration"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="150dp"
        android:layout_marginVertical="15dp"

        android:id="@+id/book_id"
        android:src="@drawable/register2"
        />

    <AutoCompleteTextView

        android:id="@+id/first_name_register"
        android:drawableStart="@drawable/person"
        android:drawablePadding="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingVertical="5sp"
        android:textColor="@color/black"
        android:inputType="text"
        android:hint="@string/enter_first_name"
        android:textColorHint="@color/black"
        android:textSize="25dp"

        />

    <AutoCompleteTextView
        android:id="@+id/edit_password_register"
        android:layout_width="match_parent"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:paddingVertical="20dp"

        android:ems="10"
        android:textSize="24dp"
        android:hint="@string/enter_your_password"
        android:inputType="numberPassword"
        android:padding="10sp" />
    <AutoCompleteTextView

        android:id="@+id/email"

        android:drawablePadding="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingVertical="20sp"
        android:textColor="@color/black"
        android:inputType="text"
        android:padding="10sp"
        android:hint="write email"
        android:textColorHint="@color/black"
        android:textSize="25dp"

        />
    <Button
        android:backgroundTint="#17476E"
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:layout_height="wrap_content"
        android:text="register"
        android:layout_marginTop="20sp"
        android:layout_marginRight="10sp"
        />
</LinearLayout>
</ScrollView>